# Fishbot-Simulation

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/fishbot_control/lib/fishbot_control/: swim_listener  swim_publisher
install/fishbot_control/share/fishbot_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/fishbot_description/share/fishbot_description/: package.sh
install/fishbot_description/share/fishbot_description/launch/: gazebo.launch.py
install/fishbot_description/share/fishbot_description/urdf/: fishbot(v1).urdf  fishbot(v2).urdf  fishbot_old_working.urdf
install/fishbot_description/share/fishbot_description/worlds/: ocean.world
log/: latest_build
src/fishbot_control/: setup.cfg  setup.py
src/fishbot_control/fishbot_control/: fish_swimmer.py  fish_teleop.py  swim_command_publisher.py
src/fishbot_description/: CMakeLists.txt  package.xml
src/fishbot_description/config/: fishbot_controllers.yaml
src/fishbot_description/launch/: display.launch.py  gazebo.launch.py
src/fishbot_description/urdf/: fishbot.urdf  fishbot.urdf.xacro
src/fishbot_plugins/: CMakeLists.txt  package.xml
src/fishbot_plugins/src/: buoyancy_plugin.cpp  drag_plugin.cpp  thrust_plugin.cpp
